--- a/code-graph-frontend/package.json
+++ b/code-graph-frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/d3": "7.4.0",
     "@types/axios": "^0.14.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
