--- a/code-graph-frontend/package.json
+++ b/code-graph-frontend/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.6",
+    "@mui/x-data-grid": "^6.9.0",
     "@types/axios": "^0.14.0",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
