--- a/code-graph-frontend/package.json
+++ b/code-graph-frontend/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.13.6",
+    "@mui/icons-material": "^5.14.6",
+    "@mui/material": "^5.14.6",
     "@mui/x-data-grid": "^6.9.0",
     "@types/axios": "^0.14.0",
     "@types/react-dom": "18.2.1",
