--- a/code-graph-frontend/package.json
+++ b/code-graph-frontend/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.6",
+    "@mui/lab": "^5.0.0-alpha.141",
     "@mui/material": "^5.14.6",
     "@mui/x-data-grid": "^6.9.0",
     "@types/axios": "^0.14.0",
