--- a/code-graph-frontend/package.json
+++ b/code-graph-frontend/package.json
@@ -22,6 +22,8 @@
     "d3": "^7.8.5",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "next": "13.3.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
