--- a/code-graph-frontend/package.json
+++ b/code-graph-frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/lab": "^5.0.0-alpha.141",
     "@mui/material": "^5.14.6",
     "@mui/x-data-grid": "^6.9.0",
+    "@tanstack/react-table": "^8.10.3",
     "@types/axios": "^0.14.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
