--- a/code-graph-frontend/package.json
+++ b/code-graph-frontend/package.json
@@ -36,6 +36,8 @@
     "@types/d3": "^7.4.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "typescript": "5.1.3"
   }
 }
