--- a/code-graph-frontend/package.json
+++ b/code-graph-frontend/package.json
@@ -29,6 +29,7 @@
     "next": "13.3.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "tailwindcss": "3.3.2"
