--- a/code-graph-frontend/package.json
+++ b/code-graph-frontend/package.json
@@ -26,11 +26,11 @@
     "eslint-config-next": "13.3.4",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "next": "13.3.4",
+    "next": "^13.5.3",
     "postcss": "8.4.23",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "tailwindcss": "3.3.2"
   },
