--- a/code-graph-frontend/package.json
+++ b/code-graph-frontend/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "d3": "^7.8.5",
+    "d3-context-menu": "^2.1.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "express": "^4.18.2",
